# Citadel_COPM_IMS

./: CMakeLists.txt  README.md
include/: config.hpp  processor.hpp  signal_handler.hpp
src/: config.cpp  main.cpp  processor.cpp
